<resources>
    <string name="app_name">Aston_DZ_6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="id">ID:</string>
    <string name="phone">Phone:</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="first_name">First Name</string>
</resources>